adding some more html and css for the questions

--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width"
-    initial-scale=1.0>
-    <title>Javascript Quiz</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Javascript Basic Quiz Title Page</title>
     <link rel="stylesheet" href="style.css">
 </head>    
 <body>
 
 <div class="card" id="card0">
 <h1>This is a javascipt quiz</h1>
- <a href="wikipedia.org">click here to begin</a>
+ <a class = "button" href="./mainquiz.html">click here to begin</a>
 </div>
 
 
